--- a/css/anchors.scss
+++ b/css/anchors.scss
@@ -7,6 +7,7 @@ a:hover { text-decoration: none; }
 li > a {
     display: inline-block;
     padding: 0 var(--gap2);
+    &:hover { background-color: rgba(0,0,0,0.2); }
 }
 
 .main.menu li > a:hover {
