--- a/css/layout.scss
+++ b/css/layout.scss
@@ -20,6 +20,8 @@
     justify-content: space-between;
 }
 
+.app { display: flex; flex-direction: column; height: 100vh; }
+
 header {
     border-bottom: 1px solid #ddd;
     padding: 0 32px;
@@ -111,6 +113,11 @@ nav, .nav {
     .app & { max-width: 100%; }
     margin: auto;
     padding: var(--gap);
+    width: 100%;
+
+    .app & {
+        flex: 1;
+    }
 }
 
 main {
