--- a/css/flex.scss
+++ b/css/flex.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
 }
 
-.flex-vertical, .flex-row {
+.flex-horizontal, .flex-row {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
